# mqtt-subscribe

./: CMakeLists.txt  Main.qml  README.md  main.cpp  quicksubscription.qrc
